# coq-tools

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  OrderedSet.py  Popen_noblock.py  README.md  TODO  TODO.md  absolutize-imports.py  admit_abstract.py  admit_definitions.py  argparse_compat.py  argparse_py2.py  binding_util.py  coq_lsp.py  coq_running_support.py  coq_version.py  coqtop-as-coqc.sh  coqtop.bat  custom_arguments.py  diagnose_error.py  file_util.py  find-bug.py  generate-full-grammar.py  get-admitted-names.py  import_util.py  inline-imports.py  memoize.py  minimize-bug.py  minimize-requires.py  minimizer_drivers.py  move-requires.py  move-vernaculars.py  proof-using-helper.py  pyproject.toml  recursive_remove_definitions.py  recursive_remove_ltac.py  replace_imports.py  (+8 more)
common/: custom_arguments.py  file_util.py
coq_tools/: Popen_noblock.py  __init__.py  absolutize_imports.py  admit_abstract.py  argparse_compat.py  argparse_py2.py  binding_util.py  coq_full_grammar.py  coq_running_support.py  coq_version.py  coqchk-as-coqc.sh  coqtop.bat  custom_arguments.py  diagnose_error.py  file_util.py  find_bug.py  generate-full-grammar.py  get_admitted_names.py  import_util.py  inline_imports.py  memoize.py  minimize_requires.py  minimizer_drivers.py  move_requires.py  move_vernaculars.py  proof_using_helper.py  replace_imports.py  split_definitions.py  split_definitions_old.py  split_file.py  strip_comments.py  strip_newlines.py  subprocess_with_rusage.py  util.py  util.pyi
docs/: LOGGING.md
etc/: sudo-apt-get-update.sh
examples/: Makefile  README.md  bug05.v  bug_ccf.v  bug_ccf_small.v  bug_ccf_temp.v  disable-parallel-make.sh  empty.v  init-settings.sh  init-simple-settings.sh  prefix-grep.py  run-example-00.sh  run-example-000.sh  (+142 more)
(+164 files in other folders)
