[project]
name = "coq-tools"
version = "0.0.1"
authors = [
  { name="Jason Gross", email="jgross@mit.edu" },
]
description = "Some scripts to help manipulate Coq developments and minimize error-producing Coq code"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JasonGross/coq-tools"
"Bug Tracker" = "https://github.com/JasonGross/coq-tools/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
