[project]
name = "coq-tools"
version = "0.0.17"
authors = [{ name = "Jason Gross", email = "jgross@mit.edu" }]
description = "Some scripts to help manipulate Coq developments and minimize error-producing Coq code"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [] # Add any runtime dependencies here

[project.urls]
"Homepage" = "https://github.com/JasonGross/coq-tools"
"Bug Tracker" = "https://github.com/JasonGross/coq-tools/issues"

[project.scripts]
coq-bug-minimizer = "coq_tools.find_bug:main"
coq-require-minimizer = "coq_tools.minimize_requires:main"
coq-import-inliner = "coq_tools.inline_imports:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coq_tools"]
package-data = { "coq_tools" = ["coqtop-as-coqc.sh", "coqtop.bat"] }

[tool.black]
line-length = 120
